--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,21 +16,30 @@ Multiplo={0} deve ser um valor múltiplo de {1}
 nome=Nome
 
 #Restaurante
-NotNull.restaurante.taxaFrete= {0} é obrigatória
-NotNull.restaurante.cozinha={0} é obrigatória
-restaurante.nome=Nome do restaurante
-restaurante.cozinha=Cozinha do restaurante
-restaurante.taxaFrete=Taxa de frete do restaurante
+NotNull.restauranteInput.taxaFrete= {0} é obrigatória
+NotNull.restauranteInput.cozinha={0} é obrigatória
+restauranteInput.nome=Nome do restaurante
+restauranteInput.cozinha=Cozinha do restaurante
+restauranteInput.taxaFrete=Taxa de frete do restaurante
 
-cozinha.nome=Nome da cozinha
+#cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
 
 #Estado 
-estado.nome= Nome do estado
+#estado.nome= Nome do estado
 estado.id=Código do estado
 
 #Cidade
-cidade.nome=Nome da Cidade
-cidade.estado=Estado da cidade
+#cidade.nome=Nome da Cidade
+#cidade.estado=Estado da cidade
+
+cozinhaInput.id=Código da cozinha
+cozinhaInput.nome=Nome da cozinha
+
+estadoInput.id=Código do estado
+estadoInput.nome=Nome do estado
+
+cidadeInput.nome=Nome da cidade
+cidadeInput.estado=Estado da cidade
 
 
