--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,6 +21,8 @@ NotNull.restauranteInput.cozinha={0} é obrigatória
 restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
+restaurante.id=Código do restaurante
+formaPagamento.id=Código da forma de pagamento
 
 #cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
@@ -41,5 +43,61 @@ estadoInput.nome=Nome do estado
 
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
+
+NotBlank.formaPagamentoInput.descricao={0} é obrigatória
+formaPagamentoInput.id=Código da forma de pagamento
+formaPagamentoInput.descricao=Descricao da forma de pagamento
+
+# Endereco
+endereco=Endereco
+endereco.logradouro=Logradouro
+endereco.numero=Número do logradouro
+endereco.cidade=Cidade
+endereco.cep=CEP
+endereco.bairro=Bairro
+
+#Grupo
+grupoInput.nome=Nome do Grupo
+
+#Usuarios
+NotBlank.usuarioComSenhaInput.senha={0} é obrigatória
+usuarioComSenhaInput.nome=Nome do usuário
+usuarioComSenhaInput.email=E-mail do usuário
+usuarioComSenhaInput.senha=Senha do usuário
+
+NotBlank.usuarioInput.senha={0} é obrigatória
+usuarioInput.nome=Nome do usuário
+usuarioInput.email=E-mail do usuário
+
+NotBlank.senhaInput.senhaAtual={0} é obrigatória
+NotBlank.senhaInput.novaSenha={0} é obrigatória
+senhaInput.senhaAtual=Senha atual
+senhaInput.novaSenha=Nova senha
+
+#Produtos
+produtoInput.nome=Nome do produto
+produtoInput.descricao=Descrição do produto
+produtoInput.preco=Preço do produto
+produtoInput.ativo=Status do produto
+
+# Pedidos
+NotNull.pedidoInput.itens.produtoId=Código do produto no item é obrigatório
+NotNull.pedidoInput.itens.quantidade=Quantidade no item é obrigatório
+Size.pedidoInput.itens=O pedido deve ter pelo menos um item
+pedidoInput.restaurante=Restaurante
+pedidoInput.formaPagamento=Forma de pagamento
+pedidoInput.enderecoEntrega=Endereço de entrega
+pedidoInput.itens=Itens do pedido
+enderecoEntrega.logradouro=Logradouro do endereço de entrega
+enderecoEntrega.numero=Número do logradouro do endereço de entrega
+enderecoEntrega.cidade=Cidade do endereço de entrega
+enderecoEntrega.cidade.id=Código da cidade do endereço de entrega
+enderecoEntrega.cep=CEP do endereço de entrega
+enderecoEntrega.bairro=Bairro do endereço de entrega
+ 	
+
+
+
+
 
 
