--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,9 +95,29 @@ enderecoEntrega.cidade.id=Código da cidade do endereço de entrega
 enderecoEntrega.cep=CEP do endereço de entrega
 enderecoEntrega.bairro=Bairro do endereço de entrega
  	
+# Para filtros customizados
+typeMismatch.java.time.OffsetDateTime={0} deve ser uma data/hora válida
+typeMismatch.java.lang.Long={0} deve ser uma número válido
 
+# Pedido filter
+pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
+pedidoFilter.dataCriacaoFim=Data final de criação do pedido
+pedidoFilter.clienteId=Código do cliente
+pedidoFilter.restauranteId=Código do restaurante
+ 	
+ #Venda Diaria
+vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
+vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
+vendaDiariaFilter.restauranteId=Código do restaurante  
 
+#Foto Produto
+fotoProdutoInput.arquivo = Arquivo da foto
+fotoProdutoInput.descricao = Descricao da foto
 
+#FileSize
+FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
 
+#Validacao Foto 
+FileContentType.fotoProdutoInput.arquivo=A foto deve ser do tipo JPG ou PNG
 
 
