--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -120,4 +120,5 @@ FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
 #Validacao Foto 
 FileContentType.fotoProdutoInput.arquivo=A foto deve ser do tipo JPG ou PNG
 
-
+scope.READ=Acesso de leitura
+scope.WRITE=Acesso de escrita
